# EdgeAI

./: .gitignore  .thumbnail  BananaGuard.dc.html  HANDOFF.md  LICENSE  README.md  Ring.dc.html  index.html  package-lock.json  package.json
analysis/: README.md  actuation_reliability.py  battery_autonomy.py  detection_metrics.py  figstyle.py  impact.py  mad_filter.py  requirements.txt  tost.py
appshell/: THIRD_PARTY_NOTICES.txt  package-lock.json  package.json
backend/: README.md  decode_payload.py  manage_nodes.py  server.py  simulate_uplinks.py  test_backend.py
cloud/: README.md  ttn_webhook_to_sheets.gs
decoder/: README.md  test_decoder.js  ttn_payload_decoder.js
docs/: README.md  dashboard_modes.md  implementation_audit.md  manuscript.tex
firmware/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  actuation.c  actuation.h  app_config.h  camera_capture.c  camera_capture.h  decision_engine.c  decision_engine.h  detection_agg.c  detection_agg.h  event_log.c  event_log.h  idf_component.yml  inference.cc  inference.h  lora_telemetry.c  lora_telemetry.h  main.c  model_data.cc  model_data.h  power_mgr.c  power_mgr.h  roi_diff.c  roi_diff.h  soil_sensor.c  soil_sensor.h
ml/: README.md  benchmark_latency.py  bg_config.py  compare_evaluations.py  device_latency.py  evaluate.py  export_c_array.py  quantize_int8.py  requirements.txt  split_dataset.py  train_mobilenetv2.py
test/: README.md  dashboard_smoke.mjs  ground_truth_logger.py  test_standalone_tools.py
tools/: build_standalone.py  (+1 more)
(+16 files in other folders)
